--- a/intro/exercises/00.html
+++ b/intro/exercises/00.html
@@ -1,5 +1,15 @@
 <!-- Basic JavaScript-rendered Hello World -->
 <!-- 🐨 Create (in HTML) a <body> with a <div> with the id of "root" -->
-<!-- 🐨 Then create a <script> and create a div (💰 document.createElement('div')) -->
-<!-- 🐨 Set the div's textContent to 'Hello World' and className to 'container' -->
-<!-- 🐨 Append the div to the root div using `appendChild` -->
+<body>
+  <div id="root"></div>
+
+  <!-- 🐨 Then create a <script> and create a div (💰 document.createElement('div')) -->
+  <script type="text/javascript">
+    const div = document.createElement('div')
+    //   <!-- 🐨 Set the div's textContent to 'Hello World' and className to 'container' -->
+    div.textContent = 'Hello World'
+    div.className = 'container'
+    //   <!-- 🐨 Append the div to the root div using `appendChild` -->
+    document.body.appendChild(div)
+  </script>
+</body>
